Search page styling corrections, logica correct, merging of some functions for better readability

--- a/src/components/Search/css/SearchPage.css
+++ b/src/components/Search/css/SearchPage.css
@@ -13,6 +13,7 @@ main {
   background-color: #431e3f;
 }
 
+/* --- Layout --- */
 .search-page {
   max-width: 1000px;
   width: 100%;
@@ -20,6 +21,7 @@ main {
   margin: 30px 0;
 }
 
+/* --- Gallery --- */
 .gallery-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -27,10 +29,14 @@ main {
   gap: 10px;
 }
 
+/* --- Card Count --- */
 .display-text {
   width: 100%;
   text-align: center;
 }
+
+/* --- Search Buttons --- */
+
 .search-nav {
   display: flex;
   justify-content: center;
@@ -69,7 +75,8 @@ main {
   height: 15px;
 }
 
-.loading-message,
-.error-message {
+/* --- Loading & Error message --- */
+.loading,
+.error {
   margin-top: 30px;
 }
